--- a/src/components/subheader/subheader.scss
+++ b/src/components/subheader/subheader.scss
@@ -1,20 +1,27 @@
 .sub-header {
-    height: 70px;
+    height: 57px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
 
     .options {
-        width: 50%;
-        height: 100%;
+        width: 100%;
+        height: 28px;
         display: flex;
-        align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
+        border-top: 0.1px solid #ebeaea;
+        border-bottom: 0.1px solid #ebeaea;
 
+        
         .option {
-        padding: 10px 15px;
+        padding: 5px 80px;
         cursor: pointer;
+        align-items: center;
+        text-decoration: none;
+        font-family: 'Roborto';
+        opacity: 0.6;
+        color: #000;
         }
     }
 }
