--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,4 +1,78 @@
+.user-container {
+    border: 1px grey solid;
+}
+
+.user-name-star {
+    display: flex;
+}
+
 .image {
-    width: 229px;
-    height: 200px;
+    width: 100%;
+    height: 250px;
+    margin-top: 15px;
+    display: block;
+}
+
+.user-star{
+    margin-top: 23px;
+    margin-left: 30px;
+    color: yellow;
+}
+
+.user-name {
+    font-size: 18px;
+    padding: 25px;
+    text-align: center;
+
+}
+
+.user-xp {
+    font-size: 16px;
+    text-align: center;
+    margin-top: -15px;
+}
+
+.user-loc {
+    display: block;
+    font-size: 16px;
+    text-align: center;
+    margin: -5px auto 0 auto;
+    opacity: 0.7;
+}
+
+.user-connect {
+    width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    padding: 0 35px 0 35px;
+    font-size: 15px;
+    background-color: green;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Open Sans Condensed';
+    font-weight: bolder;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+  
+    &:hover {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+    }   
+}
+
+.user-all {
+    display: flex;
+    font-size: 14px;
+    margin: auto;
+    opacity: 0.7;
+
+    p {
+        margin-left: 10px;
+    }
 }
