--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,7 +9,6 @@
         height: 100%;
         width: 193px;
         padding: 27px;
-        margin-left: 35px;
     }
 
     .options {
@@ -21,6 +20,7 @@
             .option {
             font-family: 'Roborto';
             padding: 10px 15px;
+            padding-bottom: 35px;
             font-size: 24px;
             cursor: pointer;
             height: 32px;
@@ -33,6 +33,13 @@
         .option:hover {
             font-size: larger;
             font-weight: 700;
+            border-bottom: 5px green solid;
+        }
+
+        .option:focus {
+            font-size: larger;
+            font-weight: 700;
+            border-bottom: 5px green solid;
         }
 
     }
