--- a/src/components/subheader/subheader.scss
+++ b/src/components/subheader/subheader.scss
@@ -1,21 +1,21 @@
 .sub-header {
-    height: 57px;
     width: 100%;
-    display: flex;
+    display: block;
     justify-content: space-between;
     margin-bottom: 25px;
+    margin-top: -9px;
 
     .options {
         width: 100%;
-        height: 28px;
+        height: 42px;
         display: flex;
         justify-content: center;
-        border-top: 0.1px solid #ebeaea;
-        border-bottom: 0.1px solid #ebeaea;
+        border-top: 0.2px solid #ebeaea;
+        border-bottom: 0.2px solid #ebeaea;
 
         
         .option {
-        padding: 5px 80px;
+        padding: 10px 80px;
         cursor: pointer;
         align-items: center;
         text-decoration: none;
