--- a/src/components/achieve/achieve.scss
+++ b/src/components/achieve/achieve.scss
@@ -1,3 +1,14 @@
 .achieve {
     display: flex;
 }
+
+.achieve-span {
+    display: flex;
+    font-size: 16px;
+    margin: auto;
+    padding-right: 40px;
+
+    p {
+        margin-left: 10px;
+    }
+}
