--- a/src/components/achieve/achieve.scss
+++ b/src/components/achieve/achieve.scss
@@ -1,5 +1,9 @@
 .achieve {
+    width: 100%;
     display: flex;
+    margin-top: 5px;
+    border-bottom: 1px grey solid;
+    opacity: 0.9;
 }
 
 .achieve-span {
